<resources>
    <!--Titles-->
    <string name="app_name">Birthday Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_birthday">Add Birthday Activity</string>
    <string name="title_activity_update_birthday">Update Birthday</string>
    <string name="title_activity_view_birthday">View Birthday</string>
    <string name="title_activity_main">Birthday Reminder</string>
    <string name="title_activity_birthday_list">Birthday List Activity</string>

    <!--main page-->
    <string name="dayMonth">__dayMonth__</string>
    <string name="year">__year__</string>
    <string name="message">__message__</string>

    <!--form-->
    <string name="input_name">Name</string>
    <string name="input_email">Email</string>
    <string name="input_birthday">Birthday</string>
    <string name="input_note">Note</string>
    <string name="input_add_note">Add note with maximum of 500 words</string>

    <!--dialog-->
    <string name="discard_message">Do you want to save your current changes?</string>
    <string name="discard_title">Save</string>
    <string name="button_save">Save</string>
    <string name="button_discard">Discard</string>

    <!--birthday list-->
    <string name="no_data">No birthday is found.</string>

    <!--list item-->
    <string name="tv_name">__Name__</string>
    <string name="tv_birthday">__Birthday__</string>
    <string name="tv_age">__Age__</string>
    <string name="tv_count_down">__CD__</string>

    <!--menu-->
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>

    <!--other-->
    <string name="sp_save_state">spSaveState</string>
    <string name="network_unavailable">Network is unavailable</string>


</resources>
